Kiran/EKS_Latest_Deployment_Scripts/Sample_Deployment_Files/tenant1finalnamespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenantonenamespace
